# claude-icfr

./: .env.example  .gitignore  CLAUDE.md  ClaudeICFR.md  README.md  dev.ps1  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260519_0418_9ccb9aaeac20_create_users_table.py  20260521_0250_f657adeb7a6c_add_5_active_modules_min_models.py  20260521_2355_6c1d441c6eb9_phase1_rcm_full_extension.py  20260522_0219_945eba8891e0_phase1_test_workflow_full.py  20260609_0704_d13051e6bcf5_phase1_remediation_full.py  20260616_0749_a144dfc162a5_evidence_sha256_column.py  20260626_0000_b1f2c3d4e5a6_multitenancy_tenant_id.py
backend/app/: config.py  main.py  minio_client.py
backend/app/api/: auth.py  euc.py  evidence.py  health.py  iuc.py  notification.py  rcm.py  remediation.py  report.py  schedule.py  scoping.py  system.py  test_module.py  user_mgmt.py
backend/app/core/: database.py  deps.py  exceptions.py  middleware.py  security.py  tenant_context.py
backend/app/models/: __init__.py  base.py  euc.py  evidence.py  iuc.py  notification.py  rcm.py  remediation.py  report.py  schedule.py  scoping.py  tenant.py  test_module.py  user.py  user_mgmt.py
backend/app/schemas/: auth.py  common.py  euc.py  evidence.py  iuc.py  notification.py  rcm.py  remediation.py  report.py  schedule.py  scoping.py  test_module.py  (+2 more)
backend/tests/: conftest.py  test_health.py  test_modules.py  test_rcm.py  test_remediation.py  test_tenant.py  test_test_module.py  test_user_mgmt.py
(+137 files in other folders)
